# EDL-ObjectDetection

./: .gitignore  README.md  main.py  predict.py  predict_split.py  pyproject.toml  requirements.txt  train.py  yolo_minimal.py
EDL/: __init__.py  api.py  cli.py  engine.py  testing.py
EDL/data/: __init__.py  dataset.py
EDL/model/: blocks.py  network.py
EDL/utils/: geometry.py  io.py  nms.py  runtime.py  vis.py
docs/: API_AND_CLI.md  DEVELOPER_GUIDE.md  MODEL_ARCHITECTURE.md  TECHNICAL.md  USER_FUNCTIONS.md
miniyolo/: cli.py
miniyolo/model/: __init__.py
miniyolo/utils/: __init__.py  io.py  nms.py  vis.py
testing/: test_pred.ipynb  test_train.ipynb
