[project]
name = "edl-objectdetection"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "kagglehub[pandas-datasets]>=0.3.12",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "torch>=2.0.0",
]
